--- a/CORE_VS_PLUGIN/MSSQL_GENERATOR/ToolWindows/ORM_GENERATOR_WINDOW.xaml
+++ b/CORE_VS_PLUGIN/MSSQL_GENERATOR/ToolWindows/ORM_GENERATOR_WINDOW.xaml
@@ -5,20 +5,19 @@
                         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                         xmlns:platform="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
                         mc:Ignorable="d"
-                        Width="600"
-                        Height="500"
+                        Width="433"
+                        Height="550"
                         Title="Generate ORM"
-                        d:DesignWidth="400"
+                        ResizeMode="NoResize"
                         WindowStartupLocation="CenterScreen">
-    <Grid Margin="0,0,0,0">
-        <Button Name="btExit" Content="Exit" HorizontalAlignment="Center" Margin="0,417,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.252,0.754" Width="380" Click="btExit_Click"/>
-        <Button Name="btExecute" Content="Generate ORM" HorizontalAlignment="Center" Margin="0,356,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.129,0.453" Width="380" Height="39" Click="btExecute_Click"/>
-        <TextBox Name="txtConfigurationFile" HorizontalAlignment="Left" Margin="10,124,0,0" TextWrapping="Wrap" Text="C:\CORE_VS_PLUGIN\MSSQL\configuration.json" VerticalAlignment="Top" Width="319" Height="45"/>
-        <TextBox Name="txtORMLocation" HorizontalAlignment="Left" Margin="10,229,0,0" TextWrapping="Wrap" Text="C:\CORE_VS_PLUGIN\MSSQL\Templates\DB_ORM_TEMPLATE.txt" VerticalAlignment="Top" Width="319" Height="45"/>
-        <Button Name="btnChooseConfigurationFile" Content="..." HorizontalAlignment="Left" Margin="334,123,0,0" VerticalAlignment="Top" Width="56" Height="46" Click="btnChooseConfigurationFile_Click"/>
-        <Button Name="btnChooseORMTemplate" Content="..." HorizontalAlignment="Left" Margin="334,229,0,0" VerticalAlignment="Top" Width="56" Height="45" Click="btnChooseORMTemplate_Click"/>
-        <Label Content="Configuration file:" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top"/>
-        <Label Content="ORM template:" HorizontalAlignment="Left" Margin="10,198,0,0" VerticalAlignment="Top"/>
+    <Grid Margin="10,0,10,5">
+        <Button Name="btExit" Content="Exit" HorizontalAlignment="Center" Margin="0,474,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.252,0.754" Width="380" Click="btExit_Click"/>
+        <Button Name="btExecute" Content="Generate ORM" HorizontalAlignment="Center" Margin="0,411,0,0" VerticalAlignment="Top" RenderTransformOrigin="3.129,0.453" Width="380" Height="39" Click="btExecute_Click"/>
+
+        <Label Content="Configuration:" HorizontalAlignment="Center" Margin="0,235,311,0" VerticalAlignment="Top" RenderTransformOrigin="-0.277,0.401"/>
+        <TextBox Name="txtConfigurationFile" Margin="0,266,60,0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="C:\CORE_VS_PLUGIN\MSSQL\configuration.json" Height="45" VerticalAlignment="Top" Width="331"/>
+        <Button Name="btnChooseConfigurationFile" Content="..." HorizontalAlignment="Center" Margin="345,265,0,0" VerticalAlignment="Top" Width="52" Height="46" Click="btnChooseConfigurationFile_Click"/>
+
         <Label HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.105,-0.269" Width="380" Height="50">
             <Label.Resources>
                 <Style TargetType="TextBlock">
@@ -27,7 +26,18 @@
             </Label.Resources>
 
             <Label.Content>
-                <AccessText TextWrapping="Wrap" Text="In order to generate ORM classes please select configuration file and ORM template file."/>
+                <AccessText TextWrapping="Wrap" Text="In order to generate ORM classes please select configuration file and ORM template file. File must be a JSON string that looks like:"/>
+            </Label.Content>
+        </Label>
+        <Label Name="lblConfigurationObjectPreview" HorizontalAlignment="Center" Margin="0,70,0,0" VerticalAlignment="Top" Width="380" Height="100">
+            <Label.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="TextWrapping" Value="WrapWithOverflow" />
+                </Style>
+            </Label.Resources>
+
+            <Label.Content>
+                <AccessText TextWrapping="Wrap" Text=""/>
             </Label.Content>
         </Label>
 
